# oh_my_paper

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  config.example.yaml  pyproject.toml
.codex-plugin/: plugin.json
.codex/agents/: paper-abstract-bilingual.toml  paper-argument-builder.toml  paper-bibliography.toml  paper-citation-auditor.toml  paper-devils-advocate-reviewer.toml  paper-devils-advocate.toml  paper-domain-reviewer.toml  paper-draft-writer.toml  paper-editorial-synthesizer.toml  paper-field-analyst.toml  paper-intake.toml  (+19 more)
demo/: HOW_TO_REPRODUCE.md  IMAGE2_USAGE.md  IMAGEGEN_USAGE.md  INPUT_SUMMARY.md  ITERATION_LOG.md  MANIFEST.md  MODEL_SELECTION_PROTOCOL.md  PROCESS_LOG.md  README.md  REVIEW_LOOP_PROTOCOL.md  STRUCTURED_INPUT.yaml  WORKFLOW_PLAN.md  demo_figures.py  demo_paper.py  demo_process.py  demo_templates.py  input_material.md  paper.md  references.bib  run_demo.py
docs/: 00_OVERVIEW.md  ACCEPTANCE_EVALS.md  ARS_TO_CODEX_MIGRATION.md  ARS_TO_CODEX_MIGRATION.zh-CN.md  CODEX_AGENT_RECIPES.md  CODEX_AGENT_RECIPES.zh-CN.md  DUAL_MODE_TECH_DESIGN.md  HARNESS_EVAL_LOOP.md  LOCAL_PUSH_NOTES.md  MATERIALS_MAPPING.md  MATERIAL_INTAKE_WORKFLOW.md  MILESTONE1_SKELETON.md  MILESTONE2_ARTIFACTS.md  MILESTONE3_LOCAL_MVP.md  MILESTONE4_APP_SERVER_ADAPTER.md  MILESTONE5_HARNESS_FLYWHEEL.md  MILESTONE6_PACKAGING.md  OH_MY_PAPER_WORKFLOW.md  OH_MY_PAPER_WORKFLOW.zh-CN.md  PRD.md  REPO_STRUCTURE_SPEC.md  ROADMAP.md  SKILL_GROUP_ARCHITECTURE.md
scripts/: validate_m1_skeleton.py
templates/: config.example.yaml  env.example
(+338 files in other folders)
